--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 pandas==1.2.3
-streamlit==0.75.0
-pandas_profiling==2.10.0
-numpy==1.19.2
-gensim==3.8.3
 streamlit_pandas_profiling==0.1.1
-seaborn==0.11.1
+texthero==1.0.9
 matplotlib==3.3.2
+streamlit==0.78.0
+seaborn==0.11.1
+pandas_profiling==2.10.0
+numpy==1.19.3
+scikit_learn==0.24.1
